	* NEWS: Correct attribution of ini-backend.
	* configure.in: bump up the version number.

	* src/DateDisplay.py: Move common objects back to DateDisplay class.
	* src/dates/Date_ru.py: Add formats and quality.

	* src/EditPerson.py (get_place): Use "" for empty place's handle.
	* src/RelLib.py (Event.are_equal): Only compare place handles if
	at least one if them is non-empty.

2005-01-17  Don Allingham  <dallingham@users.sourceforge.net>
	* src/ReportUtils.py: Added
	* src/BaseDoc.py: support for graphs
	* src/docgen/OpenOfficeDoc.py: write_at support
	* src/Makefile.am: added ReportUtils.py

2005-01-17  Don Allingham  <dallingham@users.sourceforge.net>
	* Release: Version 1.1.3 "Splunge: this is a greate idea, but 
	possibly lousy, and I'm not being indecisive" released.

2005-01-17  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/ReadGedcom.py: Handle missing TRLR record.

2005-01-17 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/GraphViz.py: Remove bogus UI labels.

2005-01-16 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/Plugins.py (reload_plugins): Check for status.
	* src/Report.py: pychecker fixes
	* src/plugins/FamilyGroup.py (dump_parent): Typo.
	* src/ReportOptions.py (OptionHandler.set_options):
        Ignore unknown options.

	* src/docgen/PdfDoc.py: Port table and image fixes from STABLE.
	* src/plugins/Ancestors.py (person_name): Avoid overriding builtin.

2005-01-15  Don Allingham  <dallingham@users.sourceforge.net>
	* src/EditPerson.py: don't use quote date
	* src/PeopleModel.py: remove BOLD
	* src/PeopleView.py: start of sorting support
	* src/WriteXML.py: use hlink for Witness
	* various: pychecker fixes
	* configure.in: bump up to 1.1.3, the "Splunge: this is a
	greate idea, but possibly lousy, and I'm not being indecisive"
	release

2005-01-15 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/KwordDoc.py: Register with paper capabilites.
	* src/docgen/PdfDoc.py: Register with paper capabilites.