@@ -21,6 +21,11 @@
 
 # $Id$
 
+#-------------------------------------------------------------------------
+#
+#  Convert points to cm and back
+#
+#-------------------------------------------------------------------------
 def pt2cm(pt):
     """
     Converts points to centimeters. Fonts are typically specified in points,
@@ -134,6 +139,31 @@ def draw_vertical_bar_graph(doc, format, start_x, start_y, height, width, data):
 def age_of(person):
     pass
 
+#-------------------------------------------------------------------------
+#
+#  Roman numbers
+#
+#-------------------------------------------------------------------------
+def roman(num):
+    """ Integer to Roman numeral converter for 0 < num < 4000 """
+    if type(num) != type(0):
+        return "?"
+    if not 0 < num < 4000:
+        return "?"
+    vals = (1000, 900, 500, 400, 100,  90,  50,  40,  10,   9,   5,   4,   1)
+    nums = ( 'M','CM', 'D','CD', 'C','XC', 'L','XL', 'X','IX', 'V','IV', 'I')
+    retval = ""
+    for i in range(len(vals)):
+        amount  = int(num / vals[i])
+        retval += nums[i] * amount
+        num    -= vals[i] * amount
+    return retval
+
+#-------------------------------------------------------------------------
+#
+#
+#
+#-------------------------------------------------------------------------
 if __name__ == "__main__":
     import BaseDoc
     import OpenOfficeDoc
