@@ -1,7 +1,7 @@
 #
 # Gramps - a GTK+/GNOME based genealogy program
 #
-# Copyright (C) 2003-2004  Donald N. Allingham
+# Copyright (C) 2003-2005  Donald N. Allingham
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -43,7 +43,7 @@ import gtk
 # GRAMPS modules
 #
 #------------------------------------------------------------------------
-from Utils import pt2cm
+from ReportUtils import pt2cm
 import Report
 import BaseDoc
 import GenericFilter
