@@ -32,6 +32,17 @@
 	* src/RelLib.py (Event.are_equal): Only compare place handles if
 	at least one if them is non-empty.
 
+	* src/Utils.py (roman, pt2cm, cm2pt): Remove functions.
+	* src/ReportUtils.py (roman): Add function.
+	* src/docgen/OpenOfficeDoc.py (pt2cm): Remove function.
+	* src/docgen/PSDrawDoc.py (pt2cm): Remove function.
+	* src/plugins/AncestorChart2.py: Use ReportUtils.
+	* src/plugins/AncestorChart.py: Use ReportUtils.
+	* src/plugins/DesGraph.py: Use ReportUtils.
+	* src/plugins/FanChart.py: Use ReportUtils.
+	* src/plugins/StatisticsChart.py: Use ReportUtils.
+	* src/plugins/TimeLine.py: Use ReportUtils.
+
 2005-01-17  Don Allingham  <dallingham@users.sourceforge.net>
 	* src/ReportUtils.py: Added
 	* src/BaseDoc.py: support for graphs
